<resources>
    <string name="app_name">Atlasmuseum</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="settings_name">AtlasMuseum Settings</string>
    <string name="action_clean">Clean</string>
    <string name="intro1">L\'atlas mobile des œuvres d\'art</string>
    <string name="intro2">dans l\'espace public</string>
    <string name="apropos">Cette application a été mise en œvre avec le concours d\'un tas de gens biens.</string>
    <string name="title_search">RECHERCHER DES ŒUVRES</string>
    <string name="title_list">ŒUVRES TROUVEES</string>
    <string name="title_search_rayon">Autour de moi :</string>
    <string name="title_search_region">Région :</string>
    <string name="title_search_collection">Collection :</string>
    <string name="title_search_artiste">Artiste :</string>
    <string name="title_search_titre">Titre :</string>
    <string name="title_search_free">Texte :</string>
     <string name="title_apropos">A PROPOS</string>
    <string name="ok">OK</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="menu_about">A propos</string>
    <string name="menu_settings">Paramètres</string>
    <string name="action_clean2">Reset</string>
    <string name="menu_help">Aide</string>
    <string name="menu_locate">Carte</string>
    <string name="explorer">Explorer</string>
    <string name="actualites">Actualités</string>
    <string name="mon_profil">Mon profil</string>
    <string name="aide">Aide</string>
     <string name="aide_infos">Centre d\'aide Atlasmuseum</string>
    <string name="pref_server_default">Default</string>
    <string name="pref_server_test">Test</string>
    <string name="pref_server_title">Server</string>
    <string name="pref_author_title">Author</string>
    <string name="pref_author_summary">Enter you name</string>
    <string name="pref_server_am">AtlasMuseum</string>
    <string name="pref_server_refam">AtlasMuseum Ref.</string>
    <string name="uploadingd">Uploading data…</string>
    <string name="get_server_location_failed">Can\'t retrieve updload location from server</string>
    <string name="http_request_failed">HTTP request failed</string>
    <string name="upload_failed">Upload failed (%1$s)</string>
    <string name="empty_result">Empty result</string>
    <string name="data_sent_to">Data sent to %1$s</string>
     <string name="gps_click_to_enable">Le GPS est désactivé, il est souhaitable de le démarrer pour le bon fonctionnement de l\'application. Ok?</string>
    <string name="gsp_link_to_enable">Aller à la page d\'activation</string>
    <string name="annuler">Annuler</string>
    <string name="desole_position_pas_recup">Désolé, votre position ne peut être récupérée</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="latlng">Lat/Long:</string>
    <string name="default_radius">10000</string>
    <string name="default_ville">Ville</string>
    <string name="default_region">Alsace</string>
    <string name="default_collection">Commandes publique</string>
    <string name="default_titre">titre</string>
    <string name="default_artiste">artiste</string>
    <string name="default_texte">recherche</string>
    <string name="image_preview">Image Preview</string>
    <string name="button_take">Take Picture</string>
    <string name="button_location">Location Icon</string>
    <string name="button_refresh">Refresh Location</string>
    <string name="button_send">See</string>
    <string name="button_accueil">Accueil</string>
    <string name="button_carte">CARTE</string>
    <string name="button_selection">Sélection</string>
    <string name="button_atlasmuseum">Wiki</string>
    <string name="button_photo">Charger Photo</string>
    <string name="button_presdemoi">Œuvre la plus proche</string>
    <string name="button_liste">LISTE</string>
    <string name="hint_location">Coordinates</string>
    <string name="hint_comment">Add your comments</string>
    <string name="hint_status">status</string>
    <string name="hint_titre">titre</string>
    <string name="hint_ville">Ville</string>
    <string name="hint_region">région</string>
    <string name="hint_collection">collection</string>
    <string name="hint_artiste">artiste</string>
    <string name="hint_inauguration">inauguration</string>
    <string name="hint_search">recherche par mot-clé</string>
    <string name="hint_radius">rayon en mètres</string>
    <string name="hint_Siteville">ville</string>
    <string name="hint_Sitenom">nom site</string>
    <string name="hint_image_principale">image</string>
    <string name="hint_mot_cle">mots cles</string>
    <string name="hint_couleurs">couleurs</string>
    <string name="hint_precision_materiaux">materiaux extra</string>
    <string name="hint_materiaux">materiaux</string>
    <string name="hint_mouvement_artistes">mouvement artiste</string>
    <string name="hint_nature">nature</string>
    <string name="hint_texte">recherche</string>
     <string name="hint_begin_date">début</string>
      <string name="hint_end_date">fin</string>
	<string name="camera_unavailable">L\'appareil photo n\'est pas disponible.</string>
    <string name="mdp">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="memoriser_mdp">Se souvenir de moi</string>
    <string name="photo_save:">Sauvegarde photo :</string>
    <string name="send_photo_saved">Envoi des photos sauvegardées... </string>
     <string name="sending_contrib_file">Envoi des contributions....</string>
    <string name="uploading">uploading</string>
    <string name="au_moins_champ_pour_contribuer">Veuillez compléter au moins un champ pour contribuer</string>
    <string name="connexion_encours">Connexion en cours...</string>
	<string name="PB_UserChecker">Connexion...</string>
	<string name="OK">OK</string>
    <string name="url_get_location">http://atlasmuseum.irisa.fr/android/php/atlas_upl.php</string>
    <string name="url_send_default">http://atlasmuseum.irisa.fr/android/atlasmuseum_dld.php</string>
    <string name="url_send_test">http://atlasmuseum.irisa.fr/android/atlasmuseum_dld.php</string>
    <string name="url_send_am">http://atlasmuseum.irisa.fr/android/atlasmuseum_dld.php</string>
    <string name="url_send_refam">http://atlasmuseum.irisa.fr/android/atlasmuseum_dld.php</string>
    <string name="url_webview">http://atlasmuseum.irisa.fr/android/galerie.php</string>
    <string name="image_non_dispo">image non disponible</string>
    <string name="echec_upl_image">Echec du chargement de l\'image</string>
    <string name="notice_no_image">Cette notice n\'a pas d\'image</string>
    <string name="cannot_upl_image_notice">L\'image de cette notice n\'a pu être chargée</string>
       <string name="lancement">lancement...</string>
       <string name="prob_charg_image">Problème de chargement de l\'image :</string>
    <string name="url_login">http://atlasmuseum.irisa.fr/www/webservice/api.php</string>
    <string name="URL_SIGNUP"> "http://atlasmuseum.irisa.fr/android/php/ajout_utilisateur.php"</string>
    <string name="CONNECTED_AS">Connecté en tant que </string>
    <string name="ECHEC_ENVOI_OEUVRE">Echec de l\'envoi</string>
    <string name="id_non_valide">Pas de réponse du serveur, veuillez rééssayer ultérieurement</string>
    <string name="ECHEC_AUTHENTIFICATION">Echec authentification</string>
    <string name="PLEASE_CHECK_ID">Veuillez vérifier que vous avez bien entrer vos identifiants </string>
    <string name="ECHEC_INSCRIPTION">Echec lors de l\'inscription</string>
    <string name="COMPTE_EXISTANT">Compte déjà éxistant </string>
    <string name="ECHEC_CREATION_COMPTE">Echec lors de la création du compte </string>
    <string name="CHAMPS_VIDES">Veuillez renseigner tous les champs svp </string>
    <string name="CHAMPS_MDP_DIFFERENT">Le mot de passe et la confirmation sont différents </string>
   	<string name="ERROR">ERREUR </string>
   	<string name="COMPTE_CREE">Le compte a bien été créé </string>
   	<string name="ECHEC_MAP">Echec lors du chargement de la carte</string>
   	<string name="MAP_ENTREE_NOT_FOUND">Entrée non trouvé.</string>
   	<string name="ECHEC_REQUETE">Echec de la requête serveur</string>
   	<string name="ECHEC_AUTHENT_CHECK_INTERNET">Vérifiez que vous êtes bien connecté à internet.</string>
   	<string name="ECHEC_MAP_DOUBLE_CONVERSION">Problème de conversion longitude/latitude</string>
   	<string name="ECHEC_MAP_CREATION">Impossible de crée la carte</string>
   	<string name="ECHEC_SHOW_NOTICE">L\'image de cette notice n\'a pu être visualisée</string>
   	<string name="ECHEC_NOTICE">Echec lors du chargement de la notice</string>
   	<string name="NOTICE_NO_IMG">Cette notice n\'a pas d\'image</string>
   	<string name="NOTICE_IMG_LOADING_FAILED">Cette notice n\'a pas d\'image</string>
   	<string name="DB_LOADING_FAILED">Impossible de charger la base de données</string>
   	<string name="ECHEC_LOADING">Erreur de chargement</string>
   	<string name="authentification_echouee">Authentification échouée. Vérifiez que vous êtes bien connecté à internet.</string>
   	<string name="prob_connexion">Problème de connexion</string>
   	<string name="pas_de_connexion_internet">Pas de connexion internet détectée.</string>
   	<string name="echec_send_contrib">Echec de l\'envoi de vos contributions</string>
   	<string name="no_contrib_saved">Vous n\'avez pas de contribution sauvegardée.</string>
   	<string name="connexion_requis">Vous devez vous connecter à votre compte pour pouvoir envoyer vos contributions.</string>
   		<string name="echec">Echec</string>
   	<string name="no_user_position">impossible de récupérer votre position pour le moment. Veuillez réessayer ultérieurement</string>
   	<string name="erreur_interne">Erreur interne</string>
   	<string name="echec_connexion">Echec connexion</string>
    <string name="no_result">Pas de résultat</string>
    <string name="artiste">Artiste</string>
      <string name="lieu_simple">Lieu</string>
     <string name="titre">Titre</string>
      <string name="tous">Tous</string>
      <string name="contrib_save">Contribution sauvegardée</string>
     <string name="contrib_save_message">Envoyez vos contributions sauvegardées</string>
     <string name="information">Informations</string>
     <string name="envoyer_titre">Contributions envoyées</string>
      <string name="envoyer_message">Suivez l\'état de vos contributions</string>
      <string name="contribuer">Contribuer</string>
     <string name="contribuer_message">Proposez une œuvre qui n\'est pas encore référencée dans Atlasmuseum</string>
     <string name="info_contribution">Le contenu proposé ici est fourni librement, sans engagement aucun de part et d\'autre, et aucun type d\'accord ou contrat n\'est établi entre vous et les propriétaires ou les utilisateurs de ce site, les propriétaires des serveurs sur lesquels il est logé, les contributeurs individuels d\'Atlasmuseum, tout administrateur de projet, les bureaucrates, les développeurs, les administrateurs systèmes ou bien tout autre personne qui n\'est en aucune manière liée à ce projet ou à des projets fils qui peuvent être soumis à vos réclamations directes.</string>
</resources>