<?xml version="1.0" encoding="utf-8"?>
	<ScrollView 
	   xmlns:tools="http://schemas.android.com/tools"
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/ScrollView01"
	    android:layout_width="match_parent"
		android:layout_height="match_parent"

	    >
	    
	    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:ignore="DuplicateIds" >
		
	   
	    
	     <RelativeLayout
	         android:id="@+id/relativ12"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/line1" >
	
			    <TextView
			        android:id="@+id/text_titre"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="@null"
			        android:gravity="top"
			        
			        android:hint="@string/hint_titre"
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textStyle="bold" />
			
			    <TextView
			        android:id="@+id/text_artiste"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/text_titre"
			        android:layout_marginTop="5dp"
			        android:background="@null"
			        android:hint="@string/hint_artiste"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			    <TextView
			        android:id="@+id/text_inauguration"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/text_artiste"
			        android:layout_marginTop="5dp"
			        android:background="@null"
			        android:hint="@string/hint_inauguration" />
			
			    <TextView
			        android:id="@+id/text_Siteville"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/text_inauguration"
			        android:layout_marginTop="5dp"
			        android:background="@null"
			        android:hint="@string/hint_Siteville" />
			
			    <TextView
			        android:id="@+id/text_Sitenom"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/text_Siteville"
			        android:layout_marginTop="5dp"
			        android:background="@null"
			        android:hint="@string/hint_Sitenom" />
			
			    <RelativeLayout
			        android:id="@+id/naturelayout"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/text_Sitenom"
			        android:layout_marginTop="5dp" >
			
			        <TextView
			            android:id="@+id/prefix_nature"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:alpha="0.8"
			            android:background="@null"
			            android:hint="Nature : " />
			
			        <TextView
			            android:id="@+id/text_nature"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_toRightOf="@+id/prefix_nature"
			            android:background="@null"
			            android:hint="@string/hint_nature" />
			    </RelativeLayout>
			
			
			    <RelativeLayout
			        android:id="@+id/materiauxlayout"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/naturelayout"
			        android:layout_marginTop="5dp" >
			
			        <TextView
			            android:id="@+id/prefix_materiaux"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:alpha="0.8"
			            android:background="@null"
			            android:hint="Matériaux : " />
			
			        <TextView
			            android:id="@+id/text_materiaux"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_toRightOf="@+id/prefix_materiaux"
			            android:background="@null"
			            android:hint="@string/hint_materiaux" />
			    </RelativeLayout>
			
			    <RelativeLayout
			        android:id="@+id/couleurslayout"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/materiauxlayout"
			        android:layout_marginTop="5dp" >
			
			        <TextView
			            android:id="@+id/prefix_couleurs"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:alpha="0.8"
			            android:background="@null"
			            android:hint="Couleurs : " />
			
			        <TextView
			            android:id="@+id/text_couleurs"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_toRightOf="@+id/prefix_couleurs"
			            android:background="@null"
			            android:hint="@string/hint_couleurs" />
			    </RelativeLayout>
			    
			    <RelativeLayout
			        android:id="@+id/mouvementlayout"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/couleurslayout"
			        android:layout_marginTop="5dp" >
			
			        <TextView
			            android:id="@+id/prefix_mouvement_artistes"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:alpha="0.8"
			            android:background="@null"
			            android:hint="Mouvement artistes : " />
			
			        <TextView
			            android:id="@+id/text_mouvement_artistes"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_toRightOf="@+id/prefix_mouvement_artistes"
			            android:background="@null"
			            android:hint="@string/hint_mouvement_artistes" />
			    </RelativeLayout>
	</RelativeLayout>
	
		
	    <Button
	        android:id="@+id/button_photo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/relativ12"
	        android:contentDescription="@string/button_photo"
	        android:scaleType="centerInside"
	        android:text="@string/button_photo" />
	    
	    
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="300dp"
	        android:layout_height="300dp"
	        android:layout_below="@+id/button_photo"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="4dp"
	        android:maxHeight="300dp"
	        android:maxWidth="300dp" >
	    </ImageView>

		<Button
		    android:id="@+id/button_map"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignRight="@+id/button_photo"
		    android:contentDescription="@string/button_photo"
		    android:text="Carte" />
	
	</RelativeLayout>
</ScrollView>