<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ededed"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <ImageButton
            android:id="@+id/button_erase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_action_cancel" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center" >

            <EditText
                android:id="@+id/text_search"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_search_auto"
                android:drawablePadding="5dp"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="18dp" />

            <ImageButton
                android:id="@+id/button_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:background="@null"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/ic_action_mic" />
        </FrameLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tab_tous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/tous"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tab_artiste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/artiste"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tab_lieux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/lieu_simple"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tab_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/titre"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#ffda00" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_result" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/on_pressed_listview_background"
        android:scrollbarThumbVertical="@drawable/list_view_scroll" />

</LinearLayout>